<resources>
    <string name="app_name">FreeSpace</string>
    <string name="login_title">Lets Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="dont_have_account_title">Dont have an account? Register</string>
    <string name="register_title">Lets Register</string>
    <string name="do_you_have_account">Already have an account? Login</string>
    <string name="hint_name">Name</string>
    <string name="email_hint">Email</string>
    <string name="et_password_register">Password</string>
    <string name="register_btn">Register</string>
    <string name="launch_year">Launch year:</string>
    <string name="rocket_name">Rocket name:</string>
    <string name="status">Status:</string>
    <string name="rocket_type">Rocket type:</string>
    <string name="details">Details</string>
    <string name="information">Information</string>
    <string name="learn_more">Learn more on</string>
    <string name="youtube">YouTube</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="date">Date:</string>
    <string name="article">Article</string>
    <string name="reddit">Reddit</string>
    <string name="add_article">add article</string>
    <string name="save">Save</string>
    <string name="title_create_article">Create article</string>
    <string name="cheer_title">Create your own article!</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="settings">Settings</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="personal_details">Personal details</string>
    <string name="logout">Logout</string>
    <string name="regional">Regional</string>
    <string name="version">Version 1.0</string>
    <string name="favourites">Favourites</string>
    <string name="you_havent_add_your_phone_number_yet">You havent add your phone number yet</string>
    <string name="no_articles_in_favourites_yet">No articles in Favourites yet</string>
    <string name="my_account">My account</string>
    <string name="hint_phone">Phone</string>
    <string name="add_comment">Add comment</string>
    <string name="no_information_available">No information available</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="edit_article">Edit Article</string>
</resources>