<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_user_account"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/box_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/close"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/my_account"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/close"
                        app:layout_constraintStart_toStartOf="@id/close"
                        app:layout_constraintTop_toTopOf="@id/close" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:src="@color/black"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_user_account"
                tools:src="@tools:sample/avatars" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_user_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/settings_items_background"
                android:backgroundTint="#5E85F9"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@id/user_image"
                app:layout_constraintEnd_toEndOf="@id/user_image" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/white_background"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/user_image" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_background"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/edit_name" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_background"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/edit_phone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="140dp"
                android:background="@drawable/blue_background"
                android:fontFamily="@font/poppins_light"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/edit_email" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error"
        style="@style/h2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/lorem/random" />

</FrameLayout>
