<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/error"
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem/random" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/g_gray700"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_event_title"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/g_blue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Falcon 1 Makes History" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_event"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_title">

                <TextView
                    android:id="@+id/tv_event_data"
                    style="@style/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/constraint_event"
                    app:layout_constraintTop_toTopOf="@+id/constraint_event"
                    tools:text="2008 august 23" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/article_content"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/details"
                android:textColor="@color/g_blue"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/constraint_event" />


            <LinearLayout
                android:id="@+id/linear_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/article_content">

                <TextView
                    android:id="@+id/tv_event_details"
                    style="@style/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    tools:text="Falcon 1 becomes the first privately developed liquid fuel rocket to reach Earth orbit." />
            </LinearLayout>


            <TextView
                android:id="@+id/learn_more"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/learn_more"
                android:textColor="@color/g_blue"
                android:textStyle="normal"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/linear_details" />

            <LinearLayout
                android:id="@+id/linear_learn_more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/learn_more">

                <LinearLayout
                    android:id="@+id/linear_youtube"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/article_logo"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_spacex_article"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/article"
                        style="@style/MediumTextViewThin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/article"
                        android:textColor="@color/g_gray700"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_wikipedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/wikipedia_logo"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_web_search"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/wikipedia"
                        style="@style/MediumTextViewThin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/wikipedia"
                        android:textColor="@color/g_gray700"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_reddit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/reddit_logo"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_reddit"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/reddit"
                        style="@style/MediumTextViewThin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/reddit"
                        android:textColor="@color/g_gray700"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>